--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,10 @@
 
     <EditText
         android:id="@+id/name"
-        android:layout_width="wrap_content"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:gravity="center"
         android:hint="enter name here"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
